Meeting notes adjustmnets

--- a/src/pages/posts/2021-10-25-lesson-2.md
+++ b/src/pages/posts/2021-10-25-lesson-2.md
@@ -20,7 +20,7 @@ In the last meeting, we covered:
     - Indentation
     - Else statements
 
-Last week's interactive lesson is available at [https://woodlands.codes/group-a/2021/10/17/lesson-1.html](https://woodlands.codes/group-a/2021/10/17/lesson-1.html).
+Last week's interactive lesson is available [here](./2021-10-18-lesson-1).
 
 Today, we'll be covering
 - <a href="#while-loops">While loops</a>
@@ -35,41 +35,33 @@ satisfied (i.e. evaluates to `True`).
 
 The format of a while loop is as follows:
 
-```
+```py
 while <expression>
     <code>
 ```
 
 The below code presents an example of a while loop in Python.
 
-<div is="code-editor" id="editor-1">
+```py
 counter = 0
 while counter <= 6:
     print("The counter is equal to " + str(counter))
     counter = counter + 1
 print("Finally, the counter is equal to " + str(counter))
-</div>
+```
 
 We begin by defining a variable called `counter`. Then, the while loop's condition is `counter <= 6`, so the code that is indented as part of the while loop will run while `counter <= 6`. Inside the loop, `counter` is incremented and its value is printed to the output.
 
 > Note that `<=` means "less than or equal to"
 
 The code below presents a slightly more complicated usage of while loops.
-
-<div is="code-editor" id="editor-2">
+```py
 name = input()
 while name != "Vishnu":
     print("The name is not Vishnu! It is " + name + ".")
     name = input()
 print("The name is Vishnu!")
-#####
-Jeffrey
-Marcus
-Max
-Nathan
-Vishnu
-Raymond
-</div>
+```
 
 Notice how `The name is not Vishnu! It is Raymond.` is never printed to the output since the while loop terminates *before* `Raymond` is taken from the input and printed.
 
@@ -93,7 +85,7 @@ Iterate means go through or go over. Imagine you have a deck of cards. By going 
 
 The format of a for loop is as follows:
 
-```
+```py
 for <variable> in <iterable>:
     <code>
 ```
@@ -111,21 +103,20 @@ $\large{y=\sum_{x=0}^{10} x^2}$
 Note that $$y = 385$$.
 
 The notation above would have the following for-loop equivalent.
-
-<div is="code-editor" id="editor-4">
+```py
 y = 0
 # We put 11 as the stop since stop is exclusive (i.e. this iterates from 0-10)
 for i in range(0, 11):
     y += i ** 2
 print(y)
-</div>
+```
+
 
 Here's an example of using range with a reverse step.
-
-<div is="code-editor" id="editor-5">
+```py
 for i in range(10, -1, -1):
     print(i)
-</div>
+```
 
 ## Activity
 
@@ -162,20 +153,16 @@ Now, try writing the same program using a while loop!
 Lists are a data structure in Python that allow you to store elements. Lists are also an *iterable*, meaning you can use for loops to iterate the list.
 
 Lists are defined using square brackets and can be assigned to a variable. You can also optionally place elements inside a list when it is defined through comma-separated elements. Below is an example.
-
-<div is="code-editor" id="editor-8">
+```py
 names = ["Jeffrey", "Marcus", "Nathan", "Vishnu", "Max", "Raymond"]
 print(names)
-</div>
-
+```
 You can use for loops to iterate a list! :)
-
-<div is="code-editor" id="editor-15">
+```py
 names = ["Jeffrey", "Marcus", "Nathan", "Vishnu", "Max", "Raymond"]
 for name in names:
     print("The current name is " + name)
-</div>
-
+```
 To get certain elements of a list, you can use **slice notation**.
 
 Below is an explanation of the different ways you can use slice notation to get elements of a list.
@@ -183,17 +170,17 @@ Below is an explanation of the different ways you can use slice notation to get 
 > Note that lists are 0-indexed, meaning the first element will have an index of 0.
 
 Say our list is
-```python
+```py
 names = ["Jeffrey", "Marcus", "Nathan", "Vishnu", "Max", "Raymond"]
 ```
 
-| Slice 	|           Description           	|     Example   	|
-|:--------:	|:-------------------------------:	|:---------------------:	|
-|    `names[i]`   	|   Returns the element in `names` with the index `i`.     	|  `names[0]` returns `"Jeffrey"` 	|
-|    `names[start:stop]`    	|  Returns a new list with elements from the original list between the indexes `start` (inclusive) and `stop` (exclusive). |  `names[2:5]` returns `["Nathan", "Vishnu", "Max"]` 	|
-| `names[start:]` | Returns a new list with elements from the original list from the index `start` to the end of the list. | `names[3:]` returns `["Vishnu", "Max", "Raymond"]` |
-| `names[:stop]` | Returns a new list with elements from the original list from the beginning of the list to `stop` (exclusive). | `names[:5]` returns `["Jeffrey", "Marcus", "Nathan", "Vishnu", "Max"]` |
-| `names[start:stop:step]` | Returns a new list with elements from the original list between the indexes `stop` (inclusive) and `start` (exclusive) with the step `step`. | `names[1:5:2]` returns `["Marcus", "Vishnu"]` |
+| Slice 	                  | Description           	                                                                                                                      |                              Example   	                               |
+|:-------------------------|:---------------------------------------------------------------------------------------------------------------------------------------------|:----------------------------------------------------------------------:|
+| `names[i]`   	           | Returns the element in `names` with the index `i`.     	                                                                                     |                    `names[0]` returns `"Jeffrey"` 	                    |
+| `names[start:stop]`    	 | Returns a new list with elements from the original list between the indexes `start` (inclusive) and `stop` (exclusive).                      |          `names[2:5]` returns `["Nathan", "Vishnu", "Max"]` 	          |
+| `names[start:]`          | Returns a new list with elements from the original list from the index `start` to the end of the list.                                       |           `names[3:]` returns `["Vishnu", "Max", "Raymond"]`           |
+| `names[:stop]`           | Returns a new list with elements from the original list from the beginning of the list to `stop` (exclusive).                                | `names[:5]` returns `["Jeffrey", "Marcus", "Nathan", "Vishnu", "Max"]` |
+| `names[start:stop:step]` | Returns a new list with elements from the original list between the indexes `stop` (inclusive) and `start` (exclusive) with the step `step`. |             `names[1:5:2]` returns `["Marcus", "Vishnu"]`              |
 
 <br>
 
@@ -203,26 +190,26 @@ To count from the end of a list, you can use negative indices, where the last el
 
 Below are some common built-in methods and functions you can use on Python lists, where the name of the list is `current_list`.
 
-| Method 	|           Description           	|
-|:--------:	|:-------------------------------:	|
-|    `current_list.append(element)`   	|   Adds `element` to the end of the list.     	|
-| `del current_list[i]` | Deletes the element in the list with index `i`. |
-| `current_list.insert(i, element)` | Inserts `element` into the list at the desired index `i`. |
-|  `current_list.index(element)` | Returns the first index of the occurrence `element` in the list. If the element is not found, throws a `ValueError`. |
-| `current_list.count(element)` | Returns the number of occurrences of `element` in the list. |
-| `current_list.clear()` | Removes all elements in the list. |
-| `current_list.extend(iterable)` | Adds every element of an iterable to the end of the list. |
+| Method 	                                         | Description           	                                                                                                        |
+|:-------------------------------------------------|:-------------------------------------------------------------------------------------------------------------------------------|
+| `current_list.append(element)`   	               | Adds `element` to the end of the list.     	                                                                                   |
+| `del current_list[i]`                            | Deletes the element in the list with index `i`.                                                                                |
+| `current_list.insert(i, element)`                | Inserts `element` into the list at the desired index `i`.                                                                      |
+| `current_list.index(element)`                    | Returns the first index of the occurrence `element` in the list. If the element is not found, throws a `ValueError`.           |
+| `current_list.count(element)`                    | Returns the number of occurrences of `element` in the list.                                                                    |
+| `current_list.clear()`                           | Removes all elements in the list.                                                                                              |
+| `current_list.extend(iterable)`                  | Adds every element of an iterable to the end of the list.                                                                      |
 | `current_list.sort(reverse=False, key=function)` | Sorts the list based on the value returned by function when each element is passed into it; optionally sorts in reverse order. |
-| `current_list.reverse()` | Reverses the list |
-| `len(current_list)` | Returns the length (number of elements) of the list |
-| `element in current_list` | Returns a boolean whether `element` exists in the list |
+| `current_list.reverse()`                         | Reverses the list                                                                                                              |
+| `len(current_list)`                              | Returns the length (number of elements) of the list                                                                            |
+| `element in current_list`                        | Returns a boolean whether `element` exists in the list                                                                         |
 
 <br>
 > Note that this isn't a comprehensive list
 
-Here's an example of using slicing, common list methods, and using a for loop to iterate through a list!
+> Here's an example of using slicing, common list methods, and using a for loop to iterate through a list!
 
-<div is="code-editor" id="editor-9">
+```py
 names = ["Jeffrey", "Marcus", "Nathan", "Vishnu", "Max", "Raymond"]
 names.append("Mr. Dutton")
 
@@ -245,7 +232,7 @@ names.extend(["Vishnu", "Max", "Raymond"])
 
 # Now they're back!
 print(names)
-</div>
+```
 
 ## Dictionaries
 
@@ -259,7 +246,7 @@ You can also relate dictionaries to mathematical functions (as you may have lear
 
 Dictionaries are defined using curly brackets, colons between the key and the value, and commas to separate pairs of keys and values. Take a look at the below example.
 
-<div is="code-editor" id="editor-69">
+```py
 people_grades = {
     "Vishnu": 11,
     "Nathan": 12,
@@ -269,11 +256,12 @@ people_grades = {
     "Marcus": 11
 }
 print(people_grades)
-</div>
+```
 
 You can use keys to access values from dictionaries. Square brackets are used, similar to slice notation for lists. Take a look at the example below.
 
-<div is="code-editor" id="editor-420">
+
+```py
 people_grades = {
     "Vishnu": 11,
     "Nathan": 12,
@@ -283,11 +271,11 @@ people_grades = {
     "Marcus": 11
 }
 print("Marcus is in grade " + str(people_grades["Marcus"]))
-</div>
+```
 
 Similar to lists, dictionaries are *iterables* meaning you can use for loops to iterate a dictionary. The variable after the word `for` in the loop will represent the key. The below code presents an example.
 
-<div is="code-editor" id="editor-reee">
+```py
 people_grades = {
     "Vishnu": 11,
     "Nathan": 12,
@@ -298,11 +286,11 @@ people_grades = {
 }
 for name in people_grades:
     print(name + " is in grade " + str(people_grades[name]))
-</div>
+```
 
 To add a new element to a dictionary, you can use slicing! Take a look at the below example.
 
-<div is="code-editor" id="editor-mr-dutton">
+```py
 people_grades = {
     "Vishnu": 11,
     "Nathan": 12,
@@ -314,28 +302,28 @@ people_grades = {
 
 people_grades["Mr. Dutton"] = "Teacher"
 print(people_grades)
-</div>
+```
 
 Below are some common built-in methods, functions, and slicing examples you can use on Python dictionaries, where the name of the dictionary is `current_dict`.
 
-| Method 	|           Description           	|
-|:--------:	|:-------------------------------:	|
-|    `current_dict[k]`   	|   Returns the value of the element in the dictionary with the key `k` |
-| `del current_dict[k]` | Deletes the element in the dictionary with key `k`. |
+| Method 	                       | Description           	                                                                                                                                                |
+|:-------------------------------|:-----------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| `current_dict[k]`   	          | Returns the value of the element in the dictionary with the key `k`                                                                                                    |
+| `del current_dict[k]`          | Deletes the element in the dictionary with key `k`.                                                                                                                    |
 | `current_dict.get(k, default)` | Returns the value of the element in the dictionary with the key `k`. If the key is not found, `default` is returned. If `default` is not provided, `None` is returned. |
-| `current_dict.clear()` | Remove all elements from the dictionary |
-| `current_dict.items()` | Returns an iterable (similar to a list) with each element being (key, value) |
-| `current_dict.keys()` | Returns an iterable (similar to a list) of the dictionary's keys |
-| `current_dict.values()` | Returns an iterable (similar to a list) of the dictionary's values |
-| `len(current_dict)` | Returns the number of keys in the dictionary. |
-| `key in current_dict` | Returns a boolean whether `key` exists in the dictionary |
+| `current_dict.clear()`         | Remove all elements from the dictionary                                                                                                                                |
+| `current_dict.items()`         | Returns an iterable (similar to a list) with each element being (key, value)                                                                                           |
+| `current_dict.keys()`          | Returns an iterable (similar to a list) of the dictionary's keys                                                                                                       |
+| `current_dict.values()`        | Returns an iterable (similar to a list) of the dictionary's values                                                                                                     |
+| `len(current_dict)`            | Returns the number of keys in the dictionary.                                                                                                                          |
+| `key in current_dict`          | Returns a boolean whether `key` exists in the dictionary                                                                                                               |
 
 <br>
 > Note that this isn't a comprehensive list
 
 Here is an example of using dictionary methods, functions, and slicing!
 
-<div is="code-editor" id="dict-methods-editor">
+```py
 people_grades = {
     "Vishnu": 11,
     "Nathan": 12,
@@ -355,9 +343,7 @@ if student in people_grades:
     print(student + "'s grade is " + str(people_grades[student]))
 else:
     print(student + " is not a WCS exec!")
-#####
-Jeffrey
-</div>
+```
 
 ## Advanced Activity
 
@@ -381,13 +367,13 @@ As an example, note that the element 1 appears 5 times in `nums`. Try creating y
 <details>
     <summary>Solution</summary>
     
-    <div is="code-editor" id="adv-activity-sol">
+```py
 nums = [1, 3, 4, 5, 1, 2, 7, 8, 3, 4, 5, 6, 1, 2, 8, 1, 1, 7, 8] 
 freq = {}
 for element in nums:
     freq[element] = freq.get(element, 0) + 1
 print(freq)
-    </div>
+   ```
 
     
 </details>
