--- a/src/pages/posts/2021-11-01-lesson-3.md
+++ b/src/pages/posts/2021-11-01-lesson-3.md
@@ -7,7 +7,7 @@ current_page: lessons
 code_editor: true
 description: |
   Welcome to the fourth lesson of Woodlands Computer Science!
-  Presentation Slides are available [here](https://docs.google.com/presentation/d/1q_tvtd2422gJFqQ2y3P0ENGRsfu5QHNdPjT_tv3edWU/edit?usp=sharing) (use your PDSB account to view the slides)
+  Presentation Slides are available (use your PDSB account to view the slides)
 
 ---
 Welcome to the fourth lesson of Woodlands Computer Science!
@@ -81,14 +81,14 @@ def calculate_hypotenuse(a, b):
 * `return (a**2 + b**2)**0.5 `is the code that executes when our function is called.
     * Note the `return `keyword - this means that our function **returns** data whenever it is called. 
 
-<div is="code-editor" id="editor-1">
+```py
 a = 3
 b = 4 
 def calculate_hypotenuse(a, b):
     return (a**2 + b**2)**0.5
 print(calculate_hypotenuse(a, b))
 print(calculate_hypotenuse(5, 12))
-</div>
+```
 
 
 ## Scope of Functions
@@ -99,14 +99,14 @@ The “**scope**” of a function refers to where in the program the variable is
 
 <img src="/assets/img/lesson-11-01/scope1.png" alt="" class="post-img">
 
-<div is="code-editor" id="editor-2">
+```py
 def cool_function(): 
     x = 10
     print(f'Inside: x = {x}')
 x = 20
 cool_function() 
 print(f'Outside: x = {x}')
-</div>
+```
 
 
 What if we want to modify or access a variable **outside** the local scope of our function?
@@ -117,15 +117,14 @@ We can use the `global` keyword. By placing `global` before any global variable 
 
 <img src="/assets/img/lesson-11-01/scope2.png" alt="" class="post-img">
 
-<div is="code-editor" id="editor-3">
+```py
 x = 10 
 def add_ten(): 
     global x 
     x = x + 10 
 add_ten() 
 print(x)
-</div>
-
+```
 <br>
 
 ## Activity
@@ -137,10 +136,6 @@ print(x)
     - Secondly, the function should return a list containing all **uppercase** characters in the string. 
 
 <br>
-
-<div is="code-editor" id="editor-5">
-
-</div>
 
 
 
@@ -154,7 +149,7 @@ Comments keep your code **readable**, especially if you plan to revisit your pro
 
 In Python, single line comments are created by preceding the comment with ‘`#`’ and multi-line comments are created by enclosing the comments with a pair of triple apostrophes (''' or """).
 
-```Python
+```py
 def calculate_hypotenuse(a, b):
     '''
     Parameters:
@@ -211,17 +206,17 @@ Sometimes, we want to output to a text file instead of to the screen. Once again
 
 However, the second parameter of the function depends on what you’re trying to achieve:
 
-| Second Parameter |                                              Description                                              |
-|:----------------:|:-----------------------------------------------------------------------------------------------------:|
-|        'a'       |       Adds to the end of the file, and creates a new file if the specified file does not exist.       |
-|        'w'       | Overwrites any existing content of the file, creates a new file if the specified file does not exist. |
-|        'x'       |               Creates a new file, throws an error if the specified file already exists.               |
-|       abs()      |                                Returns the absolute value of a number.                                |
+| Second Parameter | Description                                                                                           |
+|:-----------------|:------------------------------------------------------------------------------------------------------|
+| 'a'              | Adds to the end of the file, and creates a new file if the specified file does not exist.             |
+| 'w'              | Overwrites any existing content of the file, creates a new file if the specified file does not exist. |
+| 'x'              | Creates a new file, throws an error if the specified file already exists.                             |
+| abs()            | Returns the absolute value of a number.                                                               |
 <br>
 
 If we wanted to add more text to the end of `a.txt`, we would use the following code:
 
-```Python
+```py
 text = open('a.txt', 'a')
 ```
 
@@ -266,7 +261,7 @@ We can use an `else` statement after `except` which will execute if **no errors*
 
 <img src="/assets/img/lesson-11-01/tryexcept3.png" alt="" class="post-img">
 
-<div is="code-editor" id="editor-4">
+```py
 try: 
     name = "Jeffrey"
     print(name)
@@ -274,8 +269,7 @@ except:
     print("Program didn't crash :)")
 else:
     print("Else block!")
-</div>
-
+```
 <br>
 
 ## Activity
@@ -283,7 +277,3 @@ else:
 
 Write a program that takes in two integers **a** and **b** as input, and prints the result of **a/b**. Use `try` and `except` to print an error if the user tries to divide by 0, and reprompt for input until they provide valid values for **a** and **b**.
 
-
-<div is="code-editor" id="editor-7">
-
-</div>
