Remove math syntax

--- a/src/pages/posts/2021-11-01-lesson-3.md
+++ b/src/pages/posts/2021-11-01-lesson-3.md
@@ -65,7 +65,7 @@ def func_name(parameters):
 
 
 ## Example 1
-In our first meeting, we created a program (**Pythagorean Theorem**) that calculated the value of $\sqrt{a^2+b^2}$.
+In our first meeting, we created a program (**Pythagorean Theorem**) that calculated the value of sqrt(a^2+b^2).
 
 If we needed to compute this value multiple times in our program, we could create a function instead of rewriting the code!
 
